syntax = 'proto3';

package proto;

import "common.proto";
import "google/protobuf/timestamp.proto";


option go_package = "light-up-backend/lighter-service/proto";

service LighterService {
    rpc CreateLighter (Lighter) returns (LighterResponse) {}
    rpc GetLighterById (IdRequest) returns (LighterResponse) {}
    rpc GetLighterByEmail (EmailRequest) returns (LighterResponse) {}
    rpc GetLighters (Empty) returns (LighterResponse) {}

    rpc VerifyLighterUser (IdRequest) returns (LighterResponse) {}
    rpc ValidateLighterUser (IdRequest) returns (LighterResponse) {}
    rpc InValidateLighterUser (IdRequest) returns (LighterResponse) {}

}

message Lighter {
    string id = 1;
    User user = 2;
    google.protobuf.Timestamp lastLogin = 3;
    google.protobuf.Timestamp modifiedOn = 4;
    google.protobuf.Timestamp createdOn = 5;
    bool verified = 6;
    string institute = 7;
}

message LighterResponse{
    Lighter lighter = 1;
    repeated Lighter lighters = 2;
}